Feature: Designing the front index page

--- a/index.html
+++ b/index.html
@@ -48,3 +48,25 @@
     </div>
     </div>
 </nav>
+<div class="main">
+    <div class="main-branch1">
+
+    </div>
+    <div class="main-branch2">
+
+    </div>
+    <div class="main-branch3">
+
+    </div>
+</div>
+<div class="main">
+    <div class="main-branch4">
+
+    </div>
+    <div class="main-branch5">
+
+    </div>
+    <div class="main-branch6">
+
+    </div>
+</div>
