--- a/virtulization.html
+++ b/virtulization.html
@@ -2,10 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta content="width=device-width, initial-scale=1.0" name="viewport">
-
-    <title>Internet Project</title>
-
+    <title>Virtulization</title>
     <link href="css/style.css" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
@@ -14,22 +11,22 @@
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
 </head>
-<body>
-
+<body style="background-color:darkred;">
 <!-- ======= Navigation Section ======= -->
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="./index.html">Home</a>
+<nav class="navbar navbar-expand-lg navbar-expand-lg-page1 navbar-dark">
+
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
+            <a class="nav-link" href="./index.html">Home</a>
             <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <a class="nav-link dropdown-toggle active" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     Contents
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="./virtulization.html">Virtualization</a>
+                    <a class="dropdown-item" href="">Virtualization</a>
                     <div class="dropdown-divider"></div>
                     <a class="dropdown-item" href="">Containerization</a>
                     <div class="dropdown-divider"></div>
@@ -48,25 +45,16 @@
     </div>
     </div>
 </nav>
-<div class="main">
-    <div class="main-branch1">
-
-    </div>
-    <div class="main-branch2">
-
-    </div>
-    <div class="main-branch3">
-
-    </div>
-</div>
-<div class="main">
-    <div class="main-branch4">
-
-    </div>
-    <div class="main-branch5">
-
-    </div>
-    <div class="main-branch6">
-
+<!-- ======= End of Navigation Section ======= -->
+<br/>
+<br/>
+<div  class="container-fluid">
+    <h1 id="section1">What is Virtualization ?</h1>
+    <hr class="class-1"/>
+    <div class="row">
+        <div class="col-sm-10">
+        </div>
     </div>
 </div>
+</body>
+</html>
