--- a/html/virtulization.html
+++ b/html/virtulization.html
@@ -2,11 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta content="width=device-width, initial-scale=1.0" name="viewport">
-
-    <title>Internet Project</title>
-
-    <link href="css/style.css" rel="stylesheet">
+    <title>Virtulization</title>
+    <link href="../css/style.css" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
@@ -14,22 +11,22 @@
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
 </head>
-<body>
-
+<body style="background-color:darkred;">
 <!-- ======= Navigation Section ======= -->
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="./index.html">Home</a>
+<nav class="navbar navbar-expand-lg navbar-expand-lg-page1 navbar-dark">
+
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
+            <a class="nav-link" href="index.html">Home</a>
             <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <a class="nav-link dropdown-toggle active" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     Contents
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="./virtulization.html">Virtualization</a>
+                    <a class="dropdown-item" href="">Virtualization</a>
                     <div class="dropdown-divider"></div>
                     <a class="dropdown-item" href="">Containerization</a>
                     <div class="dropdown-divider"></div>
@@ -48,25 +45,21 @@
     </div>
     </div>
 </nav>
-<div class="main">
-    <div class="main-branch1">
+<!-- ======= End of Navigation Section ======= -->
+<br/>
+<br/>
+<div  class="container-fluid">
+    <h1 id="section1">What is Virtualization ?</h1>
+    <hr class="class-1"/>
+    <div class="row">
+        <div class="col-sm-5">
+            <img src="../images/img1.png" alt="What is Virtualization">
+        </div>
 
-    </div>
-    <div class="main-branch2">
-
-    </div>
-    <div class="main-branch3">
-
-    </div>
-</div>
-<div class="main">
-    <div class="main-branch4">
-
-    </div>
-    <div class="main-branch5">
-
-    </div>
-    <div class="main-branch6">
-
+        <div class="col-sm-5">
+        <p class="text-justify">Virtualization is the process of running a virtual instance of a computer system in a layer abstracted from the actual hardware. Most commonly, it refers to running multiple operating systems on a computer system simultaneously. To the applications running on top of the virtualized machine, it can appear as if they are on their own dedicated machine, where the operating system, libraries, and other programs are unique to the guest virtualized system and unconnected to the host operating system which sits below it.</p>
+        </div>
     </div>
 </div>
+</body>
+</html>
