--- a/html/index.html
+++ b/html/index.html
@@ -29,7 +29,7 @@
                     Contents
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="./html/virtulization.html">Virtualization</a>
+                    <a class="dropdown-item" href="./virtulization.html">Virtualization</a>
                     <div class="dropdown-divider"></div>
                     <a class="dropdown-item" href="">Containerization</a>
                     <div class="dropdown-divider"></div>
