Feature: Adding content to containerization.html with the style properties

--- a/html/virtulization.html
+++ b/html/virtulization.html
@@ -28,7 +28,7 @@
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                     <a class="dropdown-item" href="./virtulization.html">Virtualization</a>
                     <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="">Containerization</a>
+                    <a class="dropdown-item" href="./containerization.html">Containerization</a>
                     <div class="dropdown-divider"></div>
                     <a class="dropdown-item" href="">Comparison</a>
                     <div class="dropdown-divider"></div>
