--- a/html/containerization.html
+++ b/html/containerization.html
@@ -28,9 +28,9 @@
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                     <a class="dropdown-item" href="./virtulization.html">Virtualization</a>
                     <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="">Containerization</a>
+                    <a class="dropdown-item" href="./containerization.html">Containerization</a>
                     <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="">Comparison</a>
+                    <a class="dropdown-item" href="./differences.html">Comparison</a>
                     <div class="dropdown-divider"></div>
                     <a class="dropdown-item" href="">Web Server Using Docker </a>
                     <div class="dropdown-divider"></div>
