Feature: Adding content to linuxCmd file and the images

--- a/html/index.html
+++ b/html/index.html
@@ -37,7 +37,7 @@
                     <div class="dropdown-divider"></div>
                     <a class="dropdown-item" href="./webServer.html">Web Server Using Docker </a>
                     <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="">Linux Commands</a>
+                    <a class="dropdown-item" href="linuxCmd.html">Linux Commands</a>
                     <div class="dropdown-divider"></div>
                     <a class="dropdown-item" href="">Connect Docker with PyCharm</a>
                 </div>
