Feature: Adding links to all the pages

--- a/html/dockerPycharm.html
+++ b/html/dockerPycharm.html
@@ -28,13 +28,13 @@
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                     <a class="dropdown-item" href="./virtulization.html">Virtualization</a>
                     <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="">Containerization</a>
+                    <a class="dropdown-item" href="./containerization.html">Containerization</a>
                     <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="">Comparison</a>
+                    <a class="dropdown-item" href="./differences.html">Comparison</a>
                     <div class="dropdown-divider"></div>
                     <a class="dropdown-item" href="./webServer.html">Web Server Using Docker </a>
                     <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="">Linux Commands</a>
+                    <a class="dropdown-item" href="./linuxCmd.html">Linux Commands</a>
                     <div class="dropdown-divider"></div>
                     <a class="dropdown-item" href="./dockerPycharm.html">Connect Docker with PyCharm</a>
                 </div>
