--- a/html/index.html
+++ b/html/index.html
@@ -39,7 +39,7 @@
                     <div class="dropdown-divider"></div>
                     <a class="dropdown-item" href="linuxCmd.html">Linux Commands</a>
                     <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="">Connect Docker with PyCharm</a>
+                    <a class="dropdown-item" href="./dockerPycharm.html">Connect Docker with PyCharm</a>
                 </div>
             </li>
             <a class="nav-link" href="#about">About</a>
