--- a/html/containerization.html
+++ b/html/containerization.html
@@ -32,11 +32,11 @@
                     <div class="dropdown-divider"></div>
                     <a class="dropdown-item" href="./differences.html">Comparison</a>
                     <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="">Web Server Using Docker </a>
+                    <a class="dropdown-item" href="./webServer.html">Web Server Using Docker </a>
                     <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="">Linux Commands</a>
+                    <a class="dropdown-item" href="./linuxCmd.html">Linux Commands</a>
                     <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="">Connect Docker with PyCharm</a>
+                    <a class="dropdown-item" href="./dockerPycharm.html">Connect Docker with PyCharm</a>
                 </div>
             </li>
             <a class="nav-link" href="#about">About</a>
