--- a/html/differences.html
+++ b/html/differences.html
@@ -39,8 +39,8 @@
                     <a class="dropdown-item" href="./dockerPycharm.html">Connect Docker with PyCharm</a>
                 </div>
             </li>
-            <a class="nav-link" href="#about">About</a>
-            <a class="nav-link" href="#team">Team</a>
+            <a class="nav-link" href="./index.html#about">About</a>
+            <a class="nav-link" href="./index.html#team">Team</a>
         </div>
     </div>
     </div>
