--- a/html/index.html
+++ b/html/index.html
@@ -42,12 +42,13 @@
                     <a class="dropdown-item" href="./dockerPycharm.html">Connect Docker with PyCharm</a>
                 </div>
             </li>
-            <a class="nav-link" href="#about">About</a>
-            <a class="nav-link" href="#team">Team</a>
+            <a class="nav-link" href="./index.html#about">About</a>
+            <a class="nav-link" href="./index.html#team">Team</a>
         </div>
     </div>
     </div>
 </nav>
+<div class="container-fluid">
 <div class="main">
     <div class="main-branch1">
 
@@ -70,3 +71,47 @@
 
     </div>
 </div>
+<br/>
+<br/>
+    <h1 style="color:black">About</h1>
+    <div id="about"></div>
+    <hr class="class-7"/>
+    <div class=" about row" >
+        <div class="col-sm-10">
+            <p style="color:black">This is an assignment for the Web System Development - IS601.</p>
+            <p style="color:black">This website gives us an idea about:
+            <li style="color:black">Virtualization</li>
+            <li style="color:black">Containerization</li>
+            <li style="color:black">Difference between Virtualization and Containerization. It also gives an idea about when to opt which type.</li>
+            <li style="color:black">A tutorial on how to setup a web server on your local computer using docker</li>
+            <li style="color:black">A list of basic Linux commands and what they do as well as how to log into your docker container.</li>
+            <li style="color:black">A tutorial about how to connect Docker with Pycharm to write python code.</li>
+            </p>
+        </div>
+    </div>
+    <br/>
+    <br/>
+    <h1 style="color:black">Team</h1>
+    <div id="team"></div>
+    <hr class="class-7"/>
+    <div class="row" >
+        <div class="col-sm-5">
+            <p>
+                <img src="../images/mon.jpg" alt="Card image cap" height="400" width="400">
+                <figcaption><b>Monisha Salehittal</b></figcaption>
+                </b></p>
+            <p><img src="../images/linkedin.png" alt="link" height="50" width="50">
+                <a class="btn btn-primary btn-lg" href="https://linkedin.com/in/monisha-salehittal-061b6b119" role="button">LinkedIn</a></p>
+        </div>
+        <div class="col-sm-5">
+            <p><img src="../images/viv.jpg" alt="Card image cap" height="400" width="400">
+                <figcaption><b>Vivek Kumar</b></figcaption></p>
+            <p><img src="../images/linkedin.png" alt="link" height="50" width="50">
+                <a class="btn btn-primary btn-lg" href="https://www.linkedin.com/in/vivek-kumar-65562b90/" role="button">LinkedIn</a></p>
+        </div>
+    </div>
+
+
+</div>
+</body>
+</html>
