Feature: Adding anchor tag to all the pages Feature: Adding Footer to all the pages

--- a/html/index.html
+++ b/html/index.html
@@ -14,6 +14,9 @@
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
 </head>
+<style>
+    a { color: white; }
+</style>
 <body>
 
 <!-- ======= Navigation Section ======= -->
@@ -48,27 +51,28 @@
     </div>
     </div>
 </nav>
+<div class="bg">
 <div class="container-fluid">
 <div class="main">
     <div class="main-branch1">
-
+       <u><a href="./virtualization.html">Virtualization</a></u>
     </div>
     <div class="main-branch2">
-
+       <u> <a href="./containerization.html">Containerization</a></u>
     </div>
     <div class="main-branch3">
-
+       <u><a href="./differences.html">Virtualization Vs Containerization</a></u>
     </div>
 </div>
 <div class="main">
     <div class="main-branch4">
-
+       <u> <a href="./webServer.html">Setup Web Server using Local Computer & Docker</a></u>
     </div>
     <div class="main-branch5">
-
+       <u> <a href="./linuxCmd.html">Basic Linux Commands & Docker Container Login</a></u>
     </div>
     <div class="main-branch6">
-
+       <u><a href="./dockerPycharm.html">Connect Docker with Pycharm to run Python Code</a></u>
     </div>
 </div>
 <br/>
@@ -76,7 +80,7 @@
     <h1 style="color:black">About</h1>
     <div id="about"></div>
     <hr class="class-7"/>
-    <div class=" about row" >
+    <div class="about" >
         <div class="col-sm-10">
             <p style="color:black">This is an assignment for the Web System Development - IS601.</p>
             <p style="color:black">This website gives us an idea about:
@@ -94,7 +98,7 @@
     <h1 style="color:black">Team</h1>
     <div id="team"></div>
     <hr class="class-7"/>
-    <div class="row" >
+    <div class="row">
         <div class="col-sm-5">
             <p>
                 <img src="../images/mon.jpg" alt="Card image cap" height="400" width="400">
@@ -110,8 +114,10 @@
                 <a class="btn btn-primary btn-lg" href="https://www.linkedin.com/in/vivek-kumar-65562b90/" role="button">LinkedIn</a></p>
         </div>
     </div>
-
-
+</div>
+</div><br/><br/>
+<div class="footer">
+    <p> New Jersey Institute of Technology</p>
 </div>
 </body>
 </html>
