--- a/html/differences.html
+++ b/html/differences.html
@@ -91,7 +91,9 @@
     </div>
     <br/>
     <br/>
-
+</div>
+<div class="footer">
+    <p> New Jersey Institute of Technology</p>
 </div>
 </body>
 </html>
